# Research-Podcast-System

./: .gitignore  Dockerfile.orchestrator  Dockerfile.researcher  Dockerfile.streamlit  README.md  a2a_protocol.py  config_shared.py  docker-compose.yml  fastapi_clean.py  requirements.txt  streamlit_app_simple.py
.claude/: settings.local.json
Podcast_agent/: .gitignore  Dockerfile  config.py  fastapi_podcast.py  graph_fixed.py  requirements.txt  state.py  tools.py
Podcast_agent/agents/: __init__.py  answer_generator.py  audio_sarvam_dual_voice.py  audio_sarvam_final.py  conversation_formatter.py  question_generator.py  sarvam_config.py
researcher/: fastapi_researcher.py  pyproject.toml  requirements.txt
researcher/src/researcher/: crew.py  flow.py  main.py  pdf_generator_professional.py  report_refinement.py
researcher/src/researcher/config/: agents.yaml  tasks.yaml
researcher/src/researcher/tools/: github_repo_tool.py
