[project]
name = "researcher"
version = "0.1.0"
description = "researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[azure-ai-inference,tools]==1.14.4",
    "selenium>=4.44.0",
    "webdriver-manager>=4.0.2",
    "reportlab>=4.0.0",
    "markdown2>=2.4.0",
    "matplotlib>=3.10.9",
    "litellm>=1.86.2",
    "langchain-openai>=1.2.2",
    "weasyprint>=68.1",
    "xhtml2pdf>=0.2.17",
]

[project.scripts]
researcher = "researcher.main:run"
run_crew = "researcher.main:run"
run_with_critique = "researcher.main:run_with_critique"
refine_report = "researcher.main:refine_report"
convert_to_pdf = "researcher.main:convert_to_pdf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/researcher"]

[tool.crewai]
type = "crew"
